--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,13 +77,13 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Bowling
 MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/HeartBall
-MRUItem4=/Game/_Scenes/ClownBall
-MRUItem5=/Game/_Scenes/VR_Menu
-MRUItem6=/Game/_Scenes/Bowling
+MRUItem2=/Game/_Scenes/Maze
+MRUItem3=/Game/_Scenes/IntroScene
+MRUItem4=/Game/_Scenes/HeartBall
+MRUItem5=/Game/_Scenes/ClownBall
+MRUItem6=/Game/_Scenes/VR_Menu
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/Bowling
 None=======
 None=======
 None=======
@@ -2333,6 +2333,30 @@ BP_StartActivity_C.Replication=True
 BP_StartActivity_C.Input=True
 BP_StartActivity_C.Actor=True
 BP_StartActivity_C.TransformCommon=True
+SoundNodeWaveParam.WaveParam=True
+BP_Ringmaster_PA_C.Tick=True
+BP_Ringmaster_PA_C.Rendering=True
+BP_Ringmaster_PA_C.Replication=True
+BP_Ringmaster_PA_C.Input=True
+BP_Ringmaster_PA_C.Actor=True
+BP_Ringmaster_PA_C.TransformCommon=True
+StereoLayerComponent.Variable=True
+StereoLayerComponent.TransformCommon=True
+StereoLayerComponent.Sockets=True
+StereoLayerComponent.StereoLayer=True
+StereoLayerComponent.StereoLayer =True
+StereoLayerComponent.Rendering=True
+StereoLayerComponent.Tags=True
+StereoLayerComponent.ComponentReplication=True
+StereoLayerComponent.Activation=True
+StereoLayerComponent.Cooking=True
+StereoLayerComponent.Events=True
+BP_Ringmaster_PA_Bowling_C.TransformCommon=True
+BP_Ringmaster_PA_Bowling_C.Rendering=True
+BP_Ringmaster_PA_Bowling_C.Input=True
+BP_Ringmaster_PA_Bowling_C.Actor=True
+BP_Ringmaster_PA_Bowling_C.Tick=True
+BP_Ringmaster_PA_Bowling_C.Replication=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2351,8 +2375,8 @@ None=======
 None=======
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
-WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-Info="\"Object.Lightmass.LightmassSettings\" "
+WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent=
 PrimitiveComponent=
@@ -2360,10 +2384,10 @@ PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseA
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
 ActorComponent=
 ActorComponent=
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2411,6 +2435,9 @@ BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_Ringmaster_PA.BP_Ringmaster_PA;
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Ringmaster_PA.BP_Ringmaster_PA;
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_StartActivity.BP_StartActivity;
 RecentlyPlaced=/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2428,9 +2455,6 @@ RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
-RecentlyPlaced=/Game/ParticleEffects/Maze/M_RideBlood.M_RideBlood;
 None=======
 None=======
 None=======
@@ -2467,7 +2491,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/Bowling/BowlingBalls/Head_FearV1ReSetPivot.fbx
+GenericImport=C:/Users/Matt/Desktop/Ringmaster_GontfretSpare_Effect.wav
 None=======
 None=======
 None=======
@@ -3463,6 +3487,10 @@ None=======
 /Game/Blueprints/Bowling/BP_DestroyBallFloorBase.BP_DestroyBallFloorBase=0
 /Game/FBX_Models/HeartBall/FemaleModel/HeartBallModelV2_SackOn.HeartBallModelV2_SackOn=0
 /Game/Blueprints/HeartBall/BP_StartActivity.BP_StartActivity=0
+/Game/_Scenes/KnifeThrow.KnifeThrow:PersistentLevel.AmbientSound_Ringmaster.AmbientSound_SoundCue=0
+/Game/Blueprints/KnifeThrow/BP_Ringmaster_PA.BP_Ringmaster_PA=0
+/Game/Blueprints/Bowling/BP_Ringmaster_PA.BP_Ringmaster_PA=1
+/Game/Blueprints/Bowling/BP_Ringmaster_PA_Bowling.BP_Ringmaster_PA_Bowling=0
 
 [MaterialEditor]
 PrimType=1
