--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,13 +77,13 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/Bowling
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/Maze
-MRUItem3=/Game/_Scenes/IntroScene
-MRUItem4=/Game/_Scenes/HeartBall
-MRUItem5=/Game/_Scenes/ClownBall
-MRUItem6=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/IntroScene
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/Bowling
+MRUItem6=/Game/_Scenes/Maze
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Bowling
+LastLevel=/Game/_Scenes/IntroScene
 None=======
 None=======
 None=======
@@ -2344,7 +2344,7 @@ StereoLayerComponent.Variable=True
 StereoLayerComponent.TransformCommon=True
 StereoLayerComponent.Sockets=True
 StereoLayerComponent.StereoLayer=True
-StereoLayerComponent.StereoLayer =True
+StereoLayerComponent.StereoLayer=True
 StereoLayerComponent.Rendering=True
 StereoLayerComponent.Tags=True
 StereoLayerComponent.ComponentReplication=True
@@ -2357,6 +2357,30 @@ BP_Ringmaster_PA_Bowling_C.Input=True
 BP_Ringmaster_PA_Bowling_C.Actor=True
 BP_Ringmaster_PA_Bowling_C.Tick=True
 BP_Ringmaster_PA_Bowling_C.Replication=True
+BP_Ringmaster_PA_HeartBall_C.TransformCommon=True
+BP_Ringmaster_PA_HeartBall_C.Rendering=True
+BP_Ringmaster_PA_HeartBall_C.Input=True
+BP_Ringmaster_PA_HeartBall_C.Actor=True
+BP_Ringmaster_PA_HeartBall_C.Tick=True
+BP_Ringmaster_PA_HeartBall_C.Replication=True
+BP_Ringmaster_PA_ClownBall_C.Tick=True
+BP_Ringmaster_PA_ClownBall_C.Rendering=True
+BP_Ringmaster_PA_ClownBall_C.Replication=True
+BP_Ringmaster_PA_ClownBall_C.Input=True
+BP_Ringmaster_PA_ClownBall_C.Actor=True
+BP_Ringmaster_PA_Bowling1_C.TransformCommon=True
+BP_Ringmaster_PA_Bowling1_C.Rendering=True
+BP_Ringmaster_PA_Bowling1_C.Input=True
+BP_Ringmaster_PA_Bowling1_C.Actor=True
+BP_Ringmaster_PA_ClwnBall_C.TransformCommon=True
+BP_Ringmaster_PA_ClwnBall_C.Rendering=True
+BP_Ringmaster_PA_ClwnBall_C.Input=True
+BP_Ringmaster_PA_ClwnBall_C.Actor=True
+BP_Ringmaster_PA_ClownBall_C.TransformCommon=True
+BP_Ringmaster_PA_KnifeThrow_C.TransformCommon=True
+BP_Ringmaster_PA_KnifeThrow_C.Rendering=True
+BP_Ringmaster_PA_KnifeThrow_C.Input=True
+BP_Ringmaster_PA_KnifeThrow_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2435,6 +2459,8 @@ BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_Ringmaster_PA_Bowling1.BP_Ringmaster_PA_Bowling1;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Ringmaster_PA_HeartBall.BP_Ringmaster_PA_HeartBall;
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_Ringmaster_PA.BP_Ringmaster_PA;
 RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Ringmaster_PA.BP_Ringmaster_PA;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
@@ -2453,8 +2479,6 @@ RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_lo
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh;
 None=======
 None=======
 None=======
@@ -2466,7 +2490,7 @@ BP__BottlesRandomSpawner_C=
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=5.000 Y=9.000
+ScreenPosition=X=5.000 Y=8.000
 WindowSize=X=1577.000 Y=821.000
 InitiallyMaximized=False
 
@@ -2491,7 +2515,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/Ringmaster_GontfretSpare_Effect.wav
+GenericImport=C:/Users/Matt/Desktop/Ringmaster_Runoutofeyes_Effect.wav
 None=======
 None=======
 None=======
@@ -3491,6 +3515,8 @@ None=======
 /Game/Blueprints/KnifeThrow/BP_Ringmaster_PA.BP_Ringmaster_PA=0
 /Game/Blueprints/Bowling/BP_Ringmaster_PA.BP_Ringmaster_PA=1
 /Game/Blueprints/Bowling/BP_Ringmaster_PA_Bowling.BP_Ringmaster_PA_Bowling=0
+/Game/Blueprints/HeartBall/BP_Ringmaster_PA_HeartBall.BP_Ringmaster_PA_HeartBall=0
+/Game/Blueprints/ClownBall/BP_Ringmaster_PA_ClownBall.BP_Ringmaster_PA_ClownBall=0
 
 [MaterialEditor]
 PrimType=1
