--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,11 +78,11 @@ CurrentPosGridSize=1
 
 [MRU]
 MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/HeartBall
-MRUItem2=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem2=/Game/_Scenes/HeartBall
 MRUItem3=/Game/_Scenes/Bowling
-MRUItem4=/Game/_Scenes/VR_Menu
-MRUItem5=/Game/_Scenes/KnifeThrow
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/VR_Menu
 MRUItem6=/Game/_Scenes/Maze
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Bowling/Female_Dialog
+ContentBrowserTab1.SelectedPaths=/Game/Audio/IntroScene/Female_Dialog
 None=======
 None=======
 None=======
@@ -2381,6 +2381,19 @@ BP_Ringmaster_PA_KnifeThrow_C.TransformCommon=True
 BP_Ringmaster_PA_KnifeThrow_C.Rendering=True
 BP_Ringmaster_PA_KnifeThrow_C.Input=True
 BP_Ringmaster_PA_KnifeThrow_C.Actor=True
+K2Node_SetFieldsInStruct.PinOptions=True
+BP_Ringmaster_PA_Intro_C.TransformCommon=True
+BP_Ringmaster_PA_Intro_C.Rendering=True
+BP_Ringmaster_PA_Intro_C.Input=True
+BP_Ringmaster_PA_Intro_C.Actor=True
+BP_Ringmaster_PA_Intro_C.Tick=True
+BP_Ringmaster_PA_Intro_C.Replication=True
+BP_Female_PA_Intro_C.TransformCommon=True
+BP_Female_PA_Intro_C.Rendering=True
+BP_Female_PA_Intro_C.Input=True
+BP_Female_PA_Intro_C.Actor=True
+BP_Female_PA_Intro_C.Tick=True
+BP_Female_PA_Intro_C.Replication=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2391,7 +2404,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 None=======
 None=======
 None=======
@@ -2408,10 +2421,10 @@ PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseA
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent=
+SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent=
 ActorComponent=
-ActorComponent=
+ActorComponent="\"Object.Tags.ComponentTags\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2457,8 +2470,12 @@ BP_KnifeSpawner_C=
 BP_Menu_RandomSpawnerVolume_C="\"Object.Default.ActorList\" "
 BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
+AudioComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Intro/BP_Female_PA_Intro.BP_Female_PA_Intro;
+RecentlyPlaced=/Game/Blueprints/Intro/BP_Ringmaster_PA_Intro.BP_Ringmaster_PA_Intro;
+RecentlyPlaced=/Game/Audio/Bowling/BowlingBalls/MeatBag_Noob.MeatBag_Noob;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_Ringmaster_PA_Bowling1.BP_Ringmaster_PA_Bowling1;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Ringmaster_PA_HeartBall.BP_Ringmaster_PA_HeartBall;
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_Ringmaster_PA.BP_Ringmaster_PA;
@@ -2476,9 +2493,6 @@ RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
 None=======
 None=======
 None=======
@@ -2487,7 +2501,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=5.000 Y=8.000
@@ -2515,7 +2529,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/Dialog_Audio/Female/Female_HAHA_Effect.wav
+GenericImport=C:/Users/Matt/Desktop/Female_Whatisthis(FirstTake)_Effect.wav
 None=======
 None=======
 None=======
@@ -3517,6 +3531,13 @@ None=======
 /Game/Blueprints/Bowling/BP_Ringmaster_PA_Bowling.BP_Ringmaster_PA_Bowling=0
 /Game/Blueprints/HeartBall/BP_Ringmaster_PA_HeartBall.BP_Ringmaster_PA_HeartBall=0
 /Game/Blueprints/ClownBall/BP_Ringmaster_PA_ClownBall.BP_Ringmaster_PA_ClownBall=0
+/Game/Audio/Bowling/BowlingBalls/MeatBag_Noob.MeatBag_Noob=1
+/Game/Audio/IntroScene/Ringmaster_Dialog/Ringmaster_Intro_Answering_Whatdoyouwant_.Ringmaster_Intro_Answering_Whatdoyouwant_=0
+/Game/Audio/IntroScene/Ringmaster_Dialog/Ringmaster_Intro_TrulySplended.Ringmaster_Intro_TrulySplended=0
+/Game/Audio/IntroScene/Female_Dialog/Female_AhemSIR_Effect.Female_AhemSIR_Effect=0
+/Game/Audio/IntroScene/Female_Dialog/Female_Intro_CallRingmaster_Effect.Female_Intro_CallRingmaster_Effect=0
+/Game/Blueprints/Intro/BP_Female_PA_Intro.BP_Female_PA_Intro=0
+/Game/Blueprints/Intro/BP_Ringmaster_PA_Intro.BP_Ringmaster_PA_Intro=0
 
 [MaterialEditor]
 PrimType=1
@@ -3569,6 +3590,7 @@ K2Node_VariableSet.Variable=True
 AnimSequence.Animation=True
 SkeletalMeshActor.Animation=True
 None=======
+K2Node_VariableGet.Variable=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
