--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,10 +73,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentScalingGridSize=1
 CurrentPosGridSize=1
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/Bowling
 MRUItem4=/Game/_Scenes/HeartBall
@@ -95,7 +96,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/ParticleEffects/Maze
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -148,7 +149,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -198,7 +199,7 @@ NavModifierVolume.Cooking=True
 NavModifierVolume.BrushSettings=True
 NavModifierVolume.Actor=True
 NavMeshBoundsVolume.TransformCommon=True
-NavMeshBoundsVolume.Navigation=False
+NavMeshBoundsVolume.Navigation=True
 NavMeshBoundsVolume.Collision=True
 NavMeshBoundsVolume.Tags=True
 NavMeshBoundsVolume.Cooking=True
@@ -1649,7 +1650,7 @@ SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Input=True
 BP_Button_Start_C.TransformCommon=True
-BP_Button_Start_C.Default=False
+BP_Button_Start_C.Default=True
 BP_Button_Start_C.Rendering=True
 BP_Button_Start_C.Input=True
 BP_Button_Start_C.Actor=True
@@ -2443,11 +2444,13 @@ BP_Intro_FlickeringLight_C.TransformCommon=True
 BP_Intro_FlickeringLight_C.Rendering=True
 BP_Intro_FlickeringLight_C.Input=True
 BP_Intro_FlickeringLight_C.Actor=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -2460,7 +2463,7 @@ None=======
 None=======
 None=======
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
-MaterialExpression=
+MaterialExpression="\"Object.Constant\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
@@ -2470,10 +2473,10 @@ PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseA
 PrimitiveComponent=
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.bHiddenInGame\" \"Object.bHiddenInGame\" "
 ActorComponent=
 ActorComponent=
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.bHiddenInGame\" \"Object.bHiddenInGame\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2533,6 +2536,8 @@ LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
+RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tomb1_StaticMesh.Tomb1_StaticMesh;
@@ -2551,8 +2556,6 @@ RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone2/Tombstone2Text_Cube_0
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tombstone1Text_Cube_002.Tombstone1Text_Cube_002;
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tombstone1Text_Cube.Tombstone1Text_Cube;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
-RecentlyPlaced=/Game/Materials/_GeneralUse/Glass/Flat_Glass_Mat.Flat_Glass_Mat;
-RecentlyPlaced=/Game/FBX_Models/Maze/BodyPartTube/BodyPartTube_StaticMesh.BodyPartTube_StaticMesh;
 None=======
 None=======
 None=======
@@ -2566,7 +2569,7 @@ LastLogListing=LightingResults
 [RootWindow]
 ScreenPosition=X=12.000 Y=14.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3232,13 +3235,13 @@ SphereComponent=SphereComponent.Collision.Collision,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
 K2Node_CustomEvent=
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 None=======
 None=======
 None=======
 None=======
 VR_Menu_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BP_RandomSpawnerVolume_C=ArrayProperty.DefaultValueCategory.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.Collision.Collision,
 Bowling_C=ArrayProperty.DefaultValueCategory.None,
@@ -3306,6 +3309,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
+BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3625,6 +3629,7 @@ None=======
 /Game/Sprites_Decals/Maze/Wall_Pictures/RidePicture1_Sprite.RidePicture1_Sprite=1
 /Game/Sprites_Decals/Maze/Wall_Pictures/RidePicture2_Sprite.RidePicture2_Sprite=1
 /Game/FBX_Models/Maze/TombStones/Tombstone2/Tombstone2Text_Cube.Tombstone2Text_Cube=1
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_1.AmbientSound_SoundCue=0
 
 [MaterialEditor]
 PrimType=1
