--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,15 +73,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentScalingGridSize=1
 CurrentPosGridSize=1
-CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/Bowling
-MRUItem4=/Game/_Scenes/HeartBall
-MRUItem5=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/Maze
+MRUItem3=/Game/_Scenes/IntroScene
+MRUItem4=/Game/_Scenes/Bowling
+MRUItem5=/Game/_Scenes/HeartBall
 MRUItem6=/Game/_Scenes/KnifeThrow
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -96,7 +95,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/ClownBall/ClownTorso
 None=======
 None=======
 None=======
@@ -149,7 +148,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/ClownBall
 None=======
 None=======
 None=======
@@ -2456,27 +2455,27 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 None=======
 None=======
 None=======
 None=======
 None=======
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
-MaterialExpression="\"Object.Constant\" "
+MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
-CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
 PrimitiveComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.bHiddenInGame\" \"Object.bHiddenInGame\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent=
 ActorComponent=
-ActorComponent="\"Object.bHiddenInGame\" \"Object.bHiddenInGame\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2536,6 +2535,19 @@ LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye.brown_eye;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/teeth.teeth;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_Mat.ponytail01_Mat;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_diffuse.ponytail01_diffuse;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/old_lightskinned_male_diffuse.old_lightskinned_male_diffuse;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV2StaticMesh.ClownTorsoV2StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_teeth_baseMesh.ClownBallTorsoV2_teeth_baseMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_002.ClownBallTorsoV2_ponytail01Mesh_002;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_001.ClownBallTorsoV2_ponytail01Mesh_001;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh.ClownBallTorsoV2_ponytail01Mesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_high-polyMesh.ClownBallTorsoV2_high-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_clownballfatmanv1Mesh.ClownBallTorsoV2_clownballfatmanv1Mesh;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
@@ -2543,19 +2555,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tomb1_StaticMesh.Tomb1_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone2/Tomb2_StaticMesh.Tomb2_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone3/Tomb3_StaticMesh.Tomb3_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone4/Tomb4_StaticMesh.Tomb4_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone5/Tomb5_StaticMesh.Tomb5_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone5/Tombstone5Text_Cube_001.Tombstone5Text_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone5/Tombstone5Text_Cube.Tombstone5Text_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone4/Tombstone4Text_Cube.Tombstone4Text_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone4/Tombstone4Text_Cube_001.Tombstone4Text_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone3/tombstone3Text_Cube_001.tombstone3Text_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone3/tombstone3Text_Cube.tombstone3Text_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone2/Tombstone2Text_Cube.Tombstone2Text_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone2/Tombstone2Text_Cube_001.Tombstone2Text_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tombstone1Text_Cube_002.Tombstone1Text_Cube_002;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1/Tombstone1Text_Cube.Tombstone1Text_Cube;
-RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 None=======
 None=======
 None=======
@@ -2592,7 +2591,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/BodyTubeV1.fbx
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/ClownBall/Torso_textures/brown_eye.png
 None=======
 None=======
 None=======
@@ -3224,8 +3223,6 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
-bImportMaterials=False
-bImportTextures=False
 bImportAnimations=True
 None=======
 
@@ -3630,6 +3627,15 @@ None=======
 /Game/Sprites_Decals/Maze/Wall_Pictures/RidePicture2_Sprite.RidePicture2_Sprite=1
 /Game/FBX_Models/Maze/TombStones/Tombstone2/Tombstone2Text_Cube.Tombstone2Text_Cube=1
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_1.AmbientSound_SoundCue=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_clownballfatmanv1Mesh.ClownBallTorsoV2_clownballfatmanv1Mesh=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_high-polyMesh.ClownBallTorsoV2_high-polyMesh=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_ponytail01Mesh.ClownBallTorsoV2_ponytail01Mesh=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_ponytail01Mesh_001.ClownBallTorsoV2_ponytail01Mesh_001=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_ponytail01Mesh_002.ClownBallTorsoV2_ponytail01Mesh_002=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownBallTorsoV2_teeth_baseMesh.ClownBallTorsoV2_teeth_baseMesh=0
+/Game/FBX_Models/ClownBall/ClownTorso/brown_eye_Mat.brown_eye_Mat=0
+/Game/FBX_Models/ClownBall/ClownTorso/teeth_Mat.teeth_Mat=0
+/Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV2StaticMesh.ClownTorsoV2StaticMesh=0
 
 [MaterialEditor]
 PrimType=1
