--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,10 +74,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/VR_Menu
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/Bowling
@@ -96,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Materials/Maze/TilesFloor1
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -149,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/ClownBall
 None=======
 None=======
 None=======
@@ -2446,6 +2447,24 @@ BP_Intro_FlickeringLight_C.Input=True
 BP_Intro_FlickeringLight_C.Actor=True
 MulticastDelegateProperty.Delegate=True
 MulticastDelegateProperty.DelegateInputs=True
+BP_DestroyEyeBalInClown_C.Tick=True
+BP_DestroyEyeBalInClown_C.Rendering=True
+BP_DestroyEyeBalInClown_C.Replication=True
+BP_DestroyEyeBalInClown_C.Input=True
+BP_DestroyEyeBalInClown_C.Actor=True
+BP_DestroyEyeBalInClown_C.TransformCommon=True
+BP_RespawnBallFromClown_C.Tick=True
+BP_RespawnBallFromClown_C.Rendering=True
+BP_RespawnBallFromClown_C.Replication=True
+BP_RespawnBallFromClown_C.Input=True
+BP_RespawnBallFromClown_C.Actor=True
+BP_RespawnBallFromClown_C.TransformCommon=True
+BP_TargetPointClownBelly_C.Tick=True
+BP_TargetPointClownBelly_C.Rendering=True
+BP_TargetPointClownBelly_C.Replication=True
+BP_TargetPointClownBelly_C.Input=True
+BP_TargetPointClownBelly_C.Actor=True
+BP_TargetPointClownBelly_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2467,16 +2486,16 @@ MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 ActorComponent=
 ActorComponent=
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2490,9 +2509,9 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettin
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StaticMeshComponent="\"Object.Tags.ComponentTags\" "
-BoxComponent="\"Object.Tags.ComponentTags\" "
-ShapeComponent="\"Object.Tags.ComponentTags\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2536,6 +2555,10 @@ LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_TargetPointClownBelly.BP_TargetPointClownBelly;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBallFromClown.BP_RespawnBallFromClown;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyEyeBalInClown.BP_DestroyEyeBalInClown;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/MouthTube/ClownMouthTubeV1.ClownMouthTubeV1;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/Flat_TileFloor1_Mat.Flat_TileFloor1_Mat;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_SpecularMap.TileFloor1_SpecularMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_NormalMap.TileFloor1_NormalMap;
@@ -2552,10 +2575,6 @@ RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV2StaticMesh.Clow
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_teeth_baseMesh.ClownBallTorsoV2_teeth_baseMesh;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_002.ClownBallTorsoV2_ponytail01Mesh_002;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_001.ClownBallTorsoV2_ponytail01Mesh_001;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh.ClownBallTorsoV2_ponytail01Mesh;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_high-polyMesh.ClownBallTorsoV2_high-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_clownballfatmanv1Mesh.ClownBallTorsoV2_clownballfatmanv1Mesh;
-RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 None=======
 None=======
 None=======
@@ -2564,7 +2583,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=12.000 Y=14.000
@@ -2592,7 +2611,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/_Matt Textures all Maps/TileFloor1/TileFloor1.jpg
+GenericImport=C:/Users/Matt/Desktop/ClownMouthTubeV1.fbx
 None=======
 None=======
 None=======
@@ -3226,6 +3245,8 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 bImportAnimations=True
 None=======
+bImportMaterials=False
+bImportTextures=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
@@ -3315,7 +3336,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=False
+bAutoGenerateCollision=True
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -3638,6 +3659,11 @@ None=======
 /Game/FBX_Models/ClownBall/ClownTorso/teeth_Mat.teeth_Mat=0
 /Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV2StaticMesh.ClownTorsoV2StaticMesh=0
 /Game/Materials/Maze/TilesFloor1/Flat_TileFloor1_Mat.Flat_TileFloor1_Mat=0
+/Game/FBX_Models/ClownBall/MouthTube/ClownMouthTubeV1.ClownMouthTubeV1=0
+/Game/Blueprints/ClownBall/BP_DestroyEyeBalInClown.BP_DestroyEyeBalInClown=0
+/Game/Blueprints/ClownBall/BP_RespawnBallFromClown.BP_RespawnBallFromClown=0
+/Game/Blueprints/ClownBall/BP_TargetPointClownBelly.BP_TargetPointClownBelly=0
+/Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base=0
 
 [MaterialEditor]
 PrimType=1
