--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,15 +75,16 @@ CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
 CurrentRotGridSize=0
+CameraSpeed=2
 
 [MRU]
 MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/ClownBall
-MRUItem2=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/Bowling
+MRUItem2=/Game/_Scenes/KnifeThrow
 MRUItem3=/Game/_Scenes/IntroScene
-MRUItem4=/Game/_Scenes/Bowling
-MRUItem5=/Game/_Scenes/HeartBall
-MRUItem6=/Game/_Scenes/KnifeThrow
+MRUItem4=/Game/_Scenes/HeartBall
+MRUItem5=/Game/_Scenes/ClownBall
+MRUItem6=/Game/_Scenes/Maze
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -97,7 +98,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Materials/Menu/Sign_BloodFloor
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 None=======
 None=======
 None=======
@@ -2465,6 +2466,7 @@ BP_TargetPointClownBelly_C.Replication=True
 BP_TargetPointClownBelly_C.Input=True
 BP_TargetPointClownBelly_C.Actor=True
 BP_TargetPointClownBelly_C.TransformCommon=True
+Maze_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2475,7 +2477,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object="\"Object.Tags.ComponentTags\" "
+Object=
 None=======
 None=======
 None=======
@@ -2553,8 +2555,10 @@ SpotLightComponent="\"Object.Tags.ComponentTags\" "
 PointLightComponent="\"Object.Tags.ComponentTags\" "
 LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
+TextRenderComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/Maze.Maze;
 RecentlyPlaced=/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -2574,7 +2578,6 @@ RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_AmbientOcclusionMap.T
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1.TileFloor1;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye.brown_eye;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/teeth.teeth;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_Mat.ponytail01_Mat;
 None=======
 None=======
 None=======
@@ -2588,7 +2591,7 @@ LastLogListing=LightingResults
 [RootWindow]
 ScreenPosition=X=12.000 Y=14.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
