--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -75,16 +75,16 @@ CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
 CurrentRotGridSize=4
-CameraSpeed=2
+RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/IntroScene
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
+MRUItem2=/Game/_Scenes/KnifeThrow
 MRUItem3=/Game/_Scenes/HeartBall
 MRUItem4=/Game/_Scenes/ClownBall
 MRUItem5=/Game/_Scenes/Bowling
-MRUItem6=/Game/_Scenes/VR_Menu
+MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -98,7 +98,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 None=======
 None=======
 None=======
@@ -151,7 +151,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -2586,12 +2586,12 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=12.000 Y=14.000
+ScreenPosition=X=10.000 Y=3.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
