--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,16 +74,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
-CurrentRotGridSize=4
-RotGridEnabled=False
+CurrentRotGridSize=6
+CameraSpeed=3
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/KnifeThrow
-MRUItem3=/Game/_Scenes/HeartBall
-MRUItem4=/Game/_Scenes/ClownBall
-MRUItem5=/Game/_Scenes/Bowling
+MRUItem0=/Game/_Scenes/Bowling
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/Maze
+MRUItem3=/Game/_Scenes/KnifeThrow
+MRUItem4=/Game/_Scenes/HeartBall
+MRUItem5=/Game/_Scenes/ClownBall
 MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -98,7 +98,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/_GeneralUse/Pipes
 None=======
 None=======
 None=======
@@ -151,7 +151,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Bowling
 None=======
 None=======
 None=======
@@ -2477,7 +2477,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object="\"Object.Tags.ComponentTags\" "
+Object="\"Object.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -2586,7 +2586,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=10.000 Y=3.000
@@ -2607,7 +2607,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
+UNR=../../../../../../Users/willj/Documents/GitHub/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
